--- a/kafka/producer/Dockerfile
+++ b/kafka/producer/Dockerfile
@@ -3,8 +3,8 @@ RUN pip install kafka
 RUN pip install Flask
 RUN pip install gunicorn
 
-ARG ip=10.128.1.245:9092
-ENV  ipa=$ip
+ARG ip='apache-kafka'
+ENV  service=$ip
 COPY . /
 EXPOSE 8080
-CMD python /index.py $ipa
+CMD python /index.py $service
